changed some meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Reveal Block – Creative Club</title>
+    <title>Page Reveal Block </title>
     <link
       rel="shortcut icon"
       href="/assets/images/base/favicon.ico"
@@ -26,15 +26,7 @@
       content="Create a smooth page transition animation using GSAP's block reveal technique. Clean, elegant, and modern."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://creativeclub.vercel.app/page-reveal-block/index.html"
-    />
-    <meta
-      property="og:image"
-      content="https://creativeclub.vercel.app/assets/images/base/creative.png"
-    />
-
+    
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Page Reveal Block – Creative Club" />
@@ -42,10 +34,7 @@
       name="twitter:description"
       content="GSAP-powered page transition with reveal block effect. Clean, responsive, and ideal for modern web experiences."
     />
-    <meta
-      name="twitter:image"
-      content="https://creativeclub.vercel.app/assets/images/base/creative.png"
-    />
+    
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
