--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
     <section class="hero">
       <div class="title">
-        <h1>welcome to <br>The10 club</h1>
+        <h1>welcome to <br>The10 Club</h1>
       </div>
       <div class="image-container ordered"> 
         <img src="./assets/images/g_1.jpg" alt="" />
