--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Reveal Block </title>
+    <title>Page Reveal Block by narwal </title>
     <link
       rel="shortcut icon"
       href="/assets/images/base/favicon.ico"
